--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
-certifi==2025.1.31
+aioimaplib==2.0.1
+attrs==25.1.0
+certifi==2024.12.14
 charset-normalizer==3.4.1
 cloudinary==1.42.1
+h11==0.14.0
 idna==3.10
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.16
+iop==0.0.4
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+outcome==1.3.0.post0
 PyQt5_sip==12.17.0
+PySocks==1.7.1
+python-dotenv==1.0.1
 requests==2.32.3
 six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.28.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 urllib3==2.3.0
+websocket-client==1.8.0
+wsproto==1.2.0
